[package]
name = "embedded_linux_eink_example"
version = "0.1.0"
authors = [
    "Ioan Herisanu <ioan.herisanu.dev@gmail.com>",
]
edition = "2018"

[dependencies]
embedded-hal = { version = "0.2.2", features = ["unproven"] }
epd-waveshare-uart = { path = "../../", default-features = false, features = ["epd4in3", "graphics"]}
linux-embedded-hal = "0.3.0"
embedded-graphics = "0.6.0-alpha.2"
rppal = { version = "0.11.3", features = ["hal"] }
